--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                 <a href="">Contact</a>
             </div>
             <span class="imp">
-                <h1>Tyagadurgam Sai Vishal</h1>
+                <h1>Your Name</h1>
             </span>
             <span class="imp">
-                <h2>This is my portfolio.</h2>
+                <h2>This is your portfolio.</h2>
             </span>
         </div>
      </div>
@@ -32,7 +32,7 @@
             <span id="ed-content">
                 <h1>Education Details</h1>
                 <p class="content">
-                    I am a Under Graduate. I have completed my Computer Science Engineering in Hyderabad. 
+                    Your education details. 
                 </p>
             </span>
         </div>
@@ -42,7 +42,7 @@
             <span id="ed-content">
                 <h1>Work Experience</h1>
                 <p class="content">
-                    I am working as a Engineering Intern in OpenText Technologies pvt Ltd Hyderabad. 
+                    Any work experience. 
                 </p>
             </span>
         </div>
@@ -52,18 +52,18 @@
                 <h1>Projects</h1>
                 <div class="project-details">
                     <div>
-                        <h1>Online Diary</h1>
+                        <h1>Project 1</h1>
                         <p>
-                            This is a basic web application which allows the users to write diary online istead of writing in a book. 
+                            Some description about project.
                         </p>
                         <a href="#" class="get-details">More Details</a>
                         <a href="#" class="link">View</a>
                         <a href="#" class="git-link"><img src="resources/github-1.png" class="git-img" alt=""></a>
                     </div>
                     <div>
-                        <h1>No - Q</h1>
+                        <h1>Project 2</h1>
                         <p>
-                            This is a cross platform hybrid application intended to the customers of a super market to reduce the time for billing. 
+                            Some description about project.
                         </p>
                         <a href="#" class="get-details">More Details</a>
                         <a href="#" class="link">View</a>
@@ -78,25 +78,25 @@
                 <h1>Technical Skills</h1>
                 <div class="tech-details">
                     <div>
-                        <img src="resources/html.png" alt="">
+                        <p>Skill 1</p>
                     </div>
                     <div>
-                        <img src="resources/css.png" alt="">
+                        <p>Skill 2</p>
                     </div>
                     <div>
-                        <img src="resources/js.png" alt="">
+                        <p>Skill 3</p>
                     </div>
                     <div>
-                        <img src="resources/php.png" alt="">
+                        <p>Skill 4</p>
                     </div>
                     <div>
-                        <img src="" alt="">
+                        <p>Skill 5</p>
                     </div>
                     <div>
-                        <img src="resources/java.png" alt="">
+                        <p>Skill 6</p>
                     </div>
                     <div>
-                        <img src="resources/mysql.png" alt="">
+                        <p>Skill 7</p>
                     </div>
                 </div>
             </span>
@@ -104,16 +104,16 @@
 
         <div class="education">
             <span id="frame-content">
-                <h1>Frameworks</h1>
+                <h1>Anything More</h1>
                 <div class="frame-details">
                     <div>
-                        <img src="resources/angular.png" alt="" class="icons">
+                        <p>Add anything</p>
                     </div>
                     <div>
-                         <img src="resources/ionic.png" alt="" class="icons">
+                        <p>Add anything</p>
                     </div>  
                     <div>
-                        <img src="resources/react.png" alt="" class="react">
+                        <p>Add anything</p>
                     </div> 
                 </div>
             </span>
@@ -124,7 +124,7 @@
             <span id="ed-content">
                 <h1>Achievements</h1>
                 <p class="content">
-                    Participated in a national level hackathon on Android Application Development and won first prize conducted by NADC in Anurag Group Of Institutions.
+                    Any Achievements.
                 </p>
             </span>
         </div>
@@ -146,10 +146,10 @@
      </div>
      <div class="footer">
          <div id="social">
-             <a href="https://www.facebook.com/IamTM.VISHAL"><img src="resources/facebook-1.png" alt="" class="pic"></a>
-             <a href="https://www.instagram.com/vishhal.sai/?hl=en"><img src="resources/instagram-1.png" alt="" class="pic"></a>
-             <a href="https://github.com/Vishal2610"><img src="resources/github-1.png" alt="" class="pic git"></a>
-             <a href="https://www.linkedin.com/in/sai-vishal-tyagadurgam-34a838129/"><img src="resources/linkedin-1.png" alt="" class="pic"></a>
+             <a href=""><img src="resources/facebook-1.png" alt="" class="pic"></a>
+             <a href=""><img src="resources/instagram-1.png" alt="" class="pic"></a>
+             <a href=""><img src="resources/github-1.png" alt="" class="pic git"></a>
+             <a href=""><img src="resources/linkedin-1.png" alt="" class="pic"></a>
          </div>
          <p style="text-align: center;">Designed and Developed by <strong style="color: #d00;">Vishal.</strong></p>
      </div>
